--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -1,5 +1,5 @@
 // Typography
-$font-family-main: 'Source Sans Pro', Helvetica, Arial, sans-serif;
+$font-family-main:'Noto Sans', Alegreya, Helvetica, Arial, sans-serif;
 $font-family-headings: 'Source Sans Pro', Helvetica, Arial, sans-serif;
 $font-size: 1.25em;
 
@@ -26,5 +26,5 @@ $feature-image-text-color: #fff;
 $feature-image-size: cover; // options include "cover", "contain", "auto"
 
 // Header description box
-$header-desc-background-color: #F98752;
+$header-desc-background-color: #3A6607;
 $header-desc-text-color: #FFF;
