--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -1,6 +1,6 @@
 // Typography
-$font-family-main:'Noto Sans', Alegreya, Helvetica, Arial, sans-serif;
-$font-family-headings: 'Source Sans Pro', Helvetica, Arial, sans-serif;
+$font-family-main:'Noto Sans', Alegreya, 'Fondamento', cursive;
+$font-family-headings: 'Montserrat Subrayada', sans-serif;
 $font-size: 1.25em;
 
 // Padding
