--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -9,8 +9,8 @@ $padding-small: 5%;
 $padding-x-small: 3%;
 
 // Brand colours
-$brand-color: #fff;
-$background-color: #fff;
+$brand-color: #E42222;
+$background-color: #883B68;
 $border-color: rgba(0, 0, 0, 0.1); // rgba recommended if using feature images
 
 // Typography colours
@@ -26,5 +26,5 @@ $feature-image-text-color: #fff;
 $feature-image-size: cover; // options include "cover", "contain", "auto"
 
 // Header description box
-$header-desc-background-color: #3A6607;
-$header-desc-text-color: #FFF;
+$header-desc-background-color: #91B862;
+$header-desc-text-color: #1D8F35;
