--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -9,9 +9,9 @@ $padding-small: 5%;
 $padding-x-small: 3%;
 
 // Brand colours
-$brand-color: #E42222;
-$background-color: #883B68;
-$border-color: rgba(0, 0, 0, 0.1); // rgba recommended if using feature images
+$brand-color: #7E0E6B;
+$background-color: #FCF3A7;
+$border-color: rgba(52, 99, 33, 0.8); // rgba recommended if using feature images
 
 // Typography colours
 $text-color: #383838;
@@ -19,7 +19,7 @@ $link-color: #1ABC9C;
 $selection-color: #D4D4D4; // visible when highlighting text
 
 // Header colours
-$header-link-color: #383838;
+$header-link-color: #E02C2C;
 
 // Feature image for articles
 $feature-image-text-color: #fff;
